create github pages

--- a/page8.html
+++ b/page8.html
@@ -59,7 +59,7 @@
     
 </section>
 
-<section class="engine"><a href="https://mobiri.se/o">portfolio website templates</a></section><section class="mbr-section content8 cid-r1tckKVAbT" id="content8-y">
+<section class="engine"><a href="https://mobiri.se/g">build your own website</a></section><section class="mbr-section content8 cid-r1tckKVAbT" id="content8-y">
 
     
 
