--- a/page10.html
+++ b/page10.html
@@ -40,7 +40,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/g">how to build your own website</a></section><section class="features1 cid-r1tlqDqX1m" id="features1-12">
+<section class="engine"><a href="https://mobiri.se/a">online site builder</a></section><section class="features1 cid-r1tlqDqX1m" id="features1-12">
     
     
 
